# buchla700

./: .gitignore  README.md
.github/: FUNDING.yml
buchla-68k/: .cproject  .gitignore  .project  Makefile  readme.txt  setup  warn.sh
buchla-68k/alcyon/: addfpu.s  adfield.s  adselbx.s  asgdsp.s  asgvce.s  atoi.s  atol.s  barbadj.s  bitrev.s  blkrd.s  blkwr.s  booter.s  cg2.s  cg3.s  chgsef.s  chksec.s  close.s  clusmap.s  cminit.s  conin.s  conwr.s  croot.s  ctcpos.s  ctype.s  curset.s  dbentr.s  dcopy.s  dec2fr.s  delnote.s  delpnts.s  dformat.s  dirfns.s  dofmt.s  dopatch.s  enterit.s  etaccn.s  etadep.s  etadyn.s  etagch.s  etagpt.s  (+213 more)
buchla-68k/font/: .gitignore  cg2.c  index.html  make-font.sh  svg-font.py  svg-glyphs.c
buchla-68k/hatari/: rem.py
buchla-68k/include/: ascii.h  asgdsp.h  biosdefs.h  charset.h  cmeta.h  ctype.h  curpak.h  debug.h  errdefs.h  errno.h  fcntl.h  fields.h  fpu.h  fspars.h  glcdefs.h  graphdef.h  hwdefs.h  instdsp.h  io.h  lcdline.h  libdsp.h  libs.h  macros.h  menu.h  midas.h  objdefs.h  panel.h  patch.h  ptdisp.h  ram.h  regs.h  rom.h  scdsp.h  sclock.h  score.h  scwheel.h  secops.h  setjmp.h  slice.h  smdefs.h  (+10 more)
buchla-68k/iolib/: dofmt.c  dofmt.x  hwdefs.s  mdump.c  mdump.x  pause.c  pause.x  printf.c  printf.x  rawio.c  rawio.x  rtraps.s  setipl.s  setsr.s  sprintf.c  sprintf.x  traps.s  waitcr.c  waitcr.x
buchla-68k/lib700/: aldiv.s  almul.s  alrem.s  bitrev.c  bitrev.x  blkfill.s  blkmove.s  ctype.c  ctype.x  finalone.s  ispow2.c  ispow2.x  jumpto.s  ldiv.s  lmul.s  lrem.s  mangle.c  mangle.x  micons.c  micons.x  rand24.s  setjmp.s  tolower.c  tolower.x  toupper.c  toupper.x  uldiv.s
buchla-68k/libcio/: atoi.c  atoi.x  atol.c  atol.x  blkrd.c  blkrd.x  blkwr.c  blkwr.x  close.c  close.x  clusmap.c  clusmap.x  conin.c  conin.x  conwr.c  conwr.x  dirfns.c  dirfns.x  fgets.c  fgets.x  filesys.c  filesys.x  filname.c  filname.x  flread.c  flread.x  fopen.c  fopen.x  fprintf.c  fprintf.x  fputs.c  fputs.x  fread.c  fread.x  fscanf.c  fscanf.x  fseek.c  fseek.x  fsinit.c  fsinit.x  (+47 more)
buchla-68k/libsm/: index.c  index.x  memccpy.c  memccpy.x  memchr.c  memchr.x  memcmp.c  memcmp.x  memcmpu.c  memcmpu.x  memcpy.c  memcpy.x  memcpyw.c  memcpyw.x  memset.c  memset.x  memsetw.c  memsetw.x  rindex.c  rindex.x  str2lc.c  str2lc.x  str2uc.c  str2uc.x  strcat.c  strcat.x  strccpy.c  strccpy.x  strchr.c  strchr.x  strcmp.c  strcmp.x  strcpy.c  strcpy.x  strcspn.c  strcspn.x  strfill.c  strfill.x  strlcmp.c  strlcmp.x  (+26 more)
buchla-68k/misc/: c-files.txt  flopvbl.sh  gen-x.py  mkhd.sh  proto.c  proto.x  ram.ld  rom.ld  valid.py
buchla-68k/prolog/: croot.c  croot.x  fsmain.s
buchla-68k/ram/: addfpu.c  addfpu.x  adfield.c  adfield.x  adselbx.c  adselbx.x  asgdsp.c  asgdsp.x  asgvce.c  asgvce.x  barbadj.c  barbadj.x  chgsef.c  chgsef.x  chksec.c  chksec.x  cminit.c  cminit.x  configs.h  ctcpos.c  ctcpos.x  curset.c  curset.x  dbentr.c  dbentr.x  dcopy.c  dcopy.x  dec2fr.c  dec2fr.x  delnote.c  delnote.x  delpnts.c  delpnts.x  dfltins.h  dformat.c  dformat.x  dopatch.c  dopatch.x  enterit.c  enterit.x  (+255 more)
buchla-68k/rom/: bios.s  booter.c  booter.x  lowram.s  romp.c  romp.x  timeint.s
buchla-68k/vlib/: acctrl.s  cg2.c  cg2.x  cg3.c  cg3.x  glcinit.c  glcinit.x  glcplot.s  lseg.c  lseg.x  tsplot4.s  vbank.s  vbfill4.c  vbfill4.x  vclrav.s  vclrs.c  vclrs.x  vcputs.s  vcputsv.s  vhinit.c  vhinit.x  viint.s  (+28 more)
buchla-ctl/: .gitignore  CMakeLists.txt  Info.plist  README.md
buchla-ctl/Source/: BuchlaColors.h  BuchlaLookAndFeel.cpp  BuchlaLookAndFeel.h  HideStatusBar.mm  LCDDisplay.cpp  LCDDisplay.h  Main.cpp  MainComponent.cpp  MainComponent.h  OSCController.cpp  OSCController.h  RelativeFader.h  TouchKeyboard.cpp  TouchKeyboard.h  TouchPad.cpp  TouchPad.h
buchla-emu/: .cproject  .gitignore  .project  Makefile  copying.txt  d1.disk  pack.sh  readme.txt  setup
buchla-rpi/: Dockerfile  README.md  alsa-minimal.conf
(+475 files in other folders)
